# SEAS5_resolution

./: .gitignore  README  README.md  pyproject.toml
docs/: WORK_PLAN.md
scripts/: plot_skill_differences.py  plot_skill_maps.py  run_fixed025_workflow.sh  run_skill_analysis.py
src/seas5_resolution/: __init__.py  config.py  domain.py  io.py  metrics.py  pipeline.py  preprocess.py
src/seas5_resolution.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
