[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seas5-resolution"
version = "0.1.0"
description = "Resolution sensitivity workflow for SEAS5 SSH hindcast skill"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "xarray>=2024.1",
  "netCDF4>=1.6",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "xesmf>=0.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

